[SCHEDULE] 카테고리 재귀함수 로직 추가