@@ -1,10 +1,14 @@
 package com.neekly_report.whirlwind.service;
 
+import com.neekly_report.whirlwind.dto.CategoryDto;
 import com.neekly_report.whirlwind.dto.ScheduleDto.Response.CalendarEvent;
 import com.neekly_report.whirlwind.dto.ScheduleDto;
+import com.neekly_report.whirlwind.entity.Category;
 import com.neekly_report.whirlwind.entity.Schedule;
 import com.neekly_report.whirlwind.entity.User;
+import com.neekly_report.whirlwind.mapper.CategoryMapper;
 import com.neekly_report.whirlwind.mapper.ScheduleMapper;
+import com.neekly_report.whirlwind.repository.CategoryRepository;
 import com.neekly_report.whirlwind.repository.ScheduleRepository;
 import com.neekly_report.whirlwind.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
@@ -13,8 +17,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.Comparator;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -25,15 +28,20 @@ public class ScheduleService {
 
     private final ScheduleRepository scheduleRepository;
     private final UserRepository userRepository;
+    private final CategoryRepository categoryRepository;
+
     private final ScheduleMapper scheduleMapper;
+    private final CategoryMapper categoryMapper;
 
     @Transactional(readOnly = true)
-    public ScheduleDto.Response.ScheduleResponse insertSchedules(String userUid, ScheduleDto.Request.ScheduleCreateRequest request) {
+    public ScheduleDto.Response.ScheduleResponse insertSchedules(String userUid, ScheduleDto.Request.ScheduleManualCreateRequest request) {
         User user = userRepository.findById(userUid)
                 .orElseThrow(() -> new RuntimeException("사용자 없음"));
+        Category category = categoryRepository.findByCategoryUidAndUser_userUid(request.getCategoryUid(), userUid);
 
         Schedule schedule = scheduleMapper.toEntity(request);
         schedule.setUser(user);
+        schedule.setCategory(category);
 
         return scheduleMapper.toResponse(scheduleRepository.save(schedule));
     }
@@ -42,9 +50,13 @@ public class ScheduleService {
     public ScheduleDto.Response.ScheduleResponse updateSchedules(String userUid, ScheduleDto.Request.ScheduleUpdateRequest request) {
         User user = userRepository.findById(userUid)
                 .orElseThrow(() -> new RuntimeException("사용자 없음"));
-        request.setUser(user);
+        Category category = categoryRepository.findByCategoryUidAndUser_userUid(request.getCategoryUid(), userUid);
 
-        return scheduleMapper.toResponse(scheduleRepository.save(scheduleMapper.toEntity(request)));
+        Schedule schedule = scheduleMapper.toEntity(request);
+        schedule.setUser(user);
+        schedule.setCategory(category);
+
+        return scheduleMapper.toResponse(scheduleRepository.save(schedule));
     }
 
     @Transactional
@@ -59,15 +71,30 @@ public class ScheduleService {
 
     public List<ScheduleDto.Response.ScheduleResponse> getUserSchedules(String userUid) {
         log.info("사용자 일정 조회 - 사용자ID: {}", userUid);
+
+        List<Category> categoryList = categoryRepository.findByUser_userUidOrderByCreateDateAsc(userUid);
+        List<CategoryDto.Response.CategoryResponse> categoryResponses = categoryList.stream().map(categoryMapper::toResponse).toList();
+
         return scheduleRepository.findByUser_userUid(userUid)
                 .stream()
-                .map(scheduleMapper::toResponse)
-                .collect(Collectors.toList());
+                .map(schedule -> {
+                    ScheduleDto.Response.ScheduleResponse response = scheduleMapper.toResponse(schedule);
+                    response.setCategory(traceToRoot(response.getCategoryUid(), categoryResponses));
+                    return response;
+                })
+                .toList();
     }
 
     public ScheduleDto.Response.ScheduleResponse getUserSchedulesDetail(String scheduleUid, String userUid) {
         Schedule schedule = scheduleRepository.findByScheduleUidAndUser_userUid(scheduleUid, userUid);
-        return scheduleMapper.toResponse(schedule);
+
+        List<Category> categoryList = categoryRepository.findByUser_userUidOrderByCreateDateAsc(userUid);
+        List<CategoryDto.Response.CategoryResponse> categoryResponses = categoryList.stream().map(categoryMapper::toResponse).toList();
+
+        ScheduleDto.Response.ScheduleResponse responses = scheduleMapper.toResponse(schedule);
+        responses.setCategory(traceToRoot(schedule.getCategory().getCategoryUid(), categoryResponses));
+
+        return responses;
     }
 
     /**
@@ -109,27 +136,6 @@ public class ScheduleService {
     }
 
     /**
-     * 오늘의 일정 조회
-     */
-    public List<CalendarEvent> getTodayEvents(String userId) {
-        LocalDateTime startOfDay = LocalDateTime.now().withHour(0).withMinute(0).withSecond(0);
-        LocalDateTime endOfDay = LocalDateTime.now().withHour(23).withMinute(59).withSecond(59);
-
-        return getSchedulesByDateRange(userId, startOfDay, endOfDay);
-    }
-
-    /**
-     * 이번 주 일정 조회
-     */
-    public List<CalendarEvent> getThisWeekEvents(String userId) {
-        LocalDateTime startOfWeek = LocalDateTime.now().minusDays(LocalDateTime.now().getDayOfWeek().getValue() - 1)
-                .withHour(0).withMinute(0).withSecond(0);
-        LocalDateTime endOfWeek = startOfWeek.plusDays(6).withHour(23).withMinute(59).withSecond(59);
-
-        return getSchedulesByDateRange(userId, startOfWeek, endOfWeek);
-    }
-
-    /**
      * 다가오는 일정 조회 (다음 7일)
      */
     public List<CalendarEvent> getUpcomingEvents(String userId) {
@@ -145,4 +151,27 @@ public class ScheduleService {
         return startTime.getHour() == 0 && startTime.getMinute() == 0
                 && endTime.getHour() == 23 && endTime.getMinute() == 59;
     }
+
+
+    private List< CategoryDto.Response.CategoryResponse> traceToRoot(String targetUid, List< CategoryDto.Response.CategoryResponse> flatList) {
+        Map<String,  CategoryDto.Response.CategoryResponse> map = new HashMap<>();
+        for ( CategoryDto.Response.CategoryResponse category : flatList) {
+            map.put(category.getCategoryUid(), category);
+        }
+
+        List< CategoryDto.Response.CategoryResponse> path = new ArrayList<>();
+        CategoryDto.Response.CategoryResponse current = map.get(targetUid);
+
+        while (current != null) {
+            path.add(current);
+            String parentUid = current.getParentUid();
+            current = (parentUid != null && !parentUid.isEmpty()) ? map.get(parentUid) : null;
+        }
+
+        // 루트부터 출력
+        Collections.reverse(path);
+
+        return path;
+    }
+
 }
